# ic_gvins

./: D457.sh  NVIDIA_AGX_Orin.txt  PPS_Enable.txt  one.txt  rs_camera.launch  unix1new.py
K3105C2.0/IC-GVINS/: gvins.yaml  gvins224.yaml  gvins226.yaml  gvins227.yaml  gvins3-18.yaml
K3105C2.0/output/3-1-1/: ape_error.txt  extrinsic.txt  gvins.nav  gvins.yaml  ic_gvins_ros.fury-desktop.fury.log.ERROR.20250303-093029.159264  ic_gvins_ros.fury-desktop.fury.log.WARNING.20250303-093028.159264  kc3.csv  mappoint.txt  rpe_error_100m.txt  rpe_error_150m.txt  rpe_error_200m.txt  rpe_error_250m.txt  rpe_error_300m.txt  rpe_error_50m.txt  statistics.txt  tracking.txt  trajectory.csv
K3105C2.0/output/3-1-2/: ape_error.txt  extrinsic.txt  gvins.nav  ic_gvins_ros.fury-desktop.fury.log.ERROR.20250305-193428.2782537  ic_gvins_ros.fury-desktop.fury.log.WARNING.20250305-193427.2782537  kc3.csv  rpe_error_100m.txt  rpe_error_150m.txt  rpe_error_200m.txt  rpe_error_250m.txt  rpe_error_300m.txt  rpe_error_50m.txt  statistics.txt  tracking.txt  trajectory.csv
K3105C2.0/output/3-1-3/: ape_error.txt  extrinsic.txt  gvins.nav  gvins.yaml  ic_gvins_ros.fury-desktop.fury.log.ERROR.20250306-102040.265177  ic_gvins_ros.fury-desktop.fury.log.WARNING.20250306-102038.265177  kc3.csv  mappoint.txt  rpe_error_100m.txt  rpe_error_150m.txt  rpe_error_200m.txt  rpe_error_250m.txt  rpe_error_300m.txt  rpe_error_50m.txt  statistics.txt  tracking.txt  trajectory.csv
K3105C2.0/output/3-1-5/: ape_error.txt  extrinsic.txt  gvins.yaml  ic_gvins_ros.fury-desktop.fury.log.ERROR.20250307-170342.706377  ic_gvins_ros.fury-desktop.fury.log.WARNING.20250307-170340.706377  mappoint.txt  rpe_error_100m.txt  rpe_error_150m.txt  rpe_error_200m.txt  rpe_error_250m.txt  rpe_error_300m.txt  rpe_error_50m.txt  statistics.txt  tracking.txt  trajectory.csv
K3105C2.0/output/3-15-1/: ape_error.txt  extrinsic.txt  gvins.nav  ic_gvins_ros.fury-desktop.fury.log.ERROR.20250315-193826.43065  ic_gvins_ros.fury-desktop.fury.log.WARNING.20250315-193826.43065  mappoint.txt  rpe_error_100m.txt  rpe_error_150m.txt  rpe_error_200m.txt  rpe_error_250m.txt  rpe_error_300m.txt  rpe_error_50m.txt  statistics.txt  tracking.txt  trajectory.csv
devel/: .catkin  .rosinstall  setup.sh
src/evaluate_odometry/: evaluate_absolute.py  evaluate_odo.py  nav2traj.py
src/imu_ethernet_receiver/: CMakeLists.txt
src/sensor_driver/: CMakeLists.txt  package.xml
src/sensor_driver/launch/: sensor_driver.launch
src/sensor_driver/src/: sensor_driver_node.cpp
(+77 files in other folders)
